# mw_parallel_programming

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: more_info.txt  players.csv
data/referee-events/ball_possession/1stHalf/: Christopher_Lee.csv  Dennis_Dotterweich.csv  Leo_Langhans.csv  Nick_Gertje.csv  Niklas_Welzlein.csv  Philipp_Harlass.csv  Willi_Sommer.csv
data/referee-events/ball_possession/2ndHalf/: Ben_Muller.csv  Dennis_Dotterweich.csv  Erik_Engelhardt.csv  Kevin_Baer.csv  Leon_Heinze.csv  Niklas_Welzlein.csv  Roman_Hartleb.csv  Sandro_Schneider.csv  Vale_Reitstetter.csv  Willi_Sommer.csv
data/referee-events/interruptions/: 1stHalf.csv  2ndHalf.csv
data_test/: players.csv
data_test/referee-events/ball_possession/1stHalf/: Ben_Muller.csv  Erik_Engelhardt.csv  Kevin_Baer.csv  Leon_Heinze.csv  Leon_Krapf.csv  Luca_Ziegler.csv  Roman_Hartleb.csv  Sandro_Schneider.csv  Vale_Reitstetter.csv
data_test/referee-events/ball_possession/2ndHalf/: Christopher_Lee.csv  Leo_Langhans.csv  Leon_Krapf.csv  Luca_Ziegler.csv  Nick_Gertje.csv  Philipp_Harlass.csv
data_test/referee-events/goals/: 1stHalf.csv  2ndHalf.csv
data_test/referee-events/interruptions/: 1stHalf_bkp.csv
include/: game.h  gameio.h  referee.h  structs.h  utils.h
report/: Makefile  report.tex
src/: ball-possession.cpp  game.cpp  gameio.cpp  main.cpp  referee.cpp  utils.cpp
viewer/Debs2013Viewer/Debs2013Viewer/: AppDelegate.h  AppDelegate.m  GameDataStream.h  GameDataStream.m  GameObject.h  GameObject.m  GameStateView.h  GameStateView.m  Info.plist  Matrix.h  Matrix.m  main.m
viewer/Debs2013Viewer/Debs2013Viewer.xcodeproj/: project.pbxproj
viewer/Debs2013Viewer/Debs2013Viewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
viewer/Debs2013Viewer/Debs2013Viewer/Base.lproj/: MainMenu.xib
